Work on sidebar work

--- a/index.html
+++ b/index.html
@@ -28,28 +28,69 @@
         <div class="movie__content">
           content 1
         </div>
-        <div class="movie__action"></div>
+        <div class="movie__action">
+          <i class="m-closed"></i>
+        </div>
       </article>
       <article class="movie">
         <div class="movie__number">02</div>
+        <div class="movie__sidebar">
+          <div class="movie__sidebar--init">
+            <div class="separator"></div>
+            <button>
+              <i class="m-caret-right-solid"></i>
+            </button>
+            <div class="separator separator-down"></div>
+          </div>
+          <h2 class="movie__sidebar--name">John Wick 3</h2>
+          <i class="m-plus"></i>
+        </div>
         <div class="movie__content">
           content 2
         </div>
-        <div class="movie__action"></div>
+        <div class="movie__action">
+          <i class="m-closed"></i>
+        </div>
       </article>
       <article class="movie">
         <div class="movie__number">03</div>
+        <div class="movie__sidebar">
+          <div class="movie__sidebar--init">
+            <div class="separator"></div>
+            <button>
+              <i class="m-caret-right-solid"></i>
+            </button>
+            <div class="separator separator-down"></div>
+          </div>
+          <h2 class="movie__sidebar--name">HellBoy</h2>
+          <i class="m-plus"></i>
+        </div>
         <div class="movie__content">
           content 3
         </div>
-        <div class="movie__action"></div>
+        <div class="movie__action">
+          <i class="m-closed"></i>
+        </div>
       </article>
       <article class="movie">
         <div class="movie__number">04</div>
+        <div class="movie__sidebar">
+          <div class="movie__sidebar--init">
+            <div class="separator"></div>
+            <button>
+              <i class="m-caret-right-solid"></i>
+            </button>
+            <div class="separator separator-down"></div>
+          </div>
+          <h2 class="movie__sidebar--name">Star Wars</h2>
+          <i class="m-plus"></i>
+        </div>
         <div class="movie__content">
           content 4
         </div>
-        <div class="movie__action"></div>
+        <div class="movie__action">
+          <i class="m-closed"></i>
+        </div>
       </article>
     </section>
 
