--- a/index.html
+++ b/index.html
@@ -22,11 +22,43 @@
             </button>
             <div class="separator separator-down"></div>
           </div>
-          <h2 class="movie__sidebar--name">Jocker</h2>
+          <h2 class="movie__sidebar--name">Joker</h2>
           <i class="m-plus"></i>
         </div>
         <div class="movie__content">
-          content 1
+          <div class="content">
+            <header class="content__header">
+              <h2>Joker</h2>
+            </header>
+            <div class="content__raking">
+              <i class="m-star-solid active"></i>
+              <i class="m-star-solid active"></i>
+              <i class="m-star-solid active"></i>
+              <i class="m-star-solid"></i>
+              <i class="m-star-solid"></i>
+            </div>
+            <p class="content__sipnosis">
+              In Gotham City, mentally troubled comedian Arthur Fleck is disregarded and mistreated by society. He then embarks on a downward spiral of revolution and bloody crime. This path brings him face-to-face with his alter-ego: the Joker.
+            </p>
+            <ul class="content__meta">
+              <li><strong>Director:</strong> Todd Phillips</li>
+              <li><strong>Actors:</strong> Joaquin Phoenix, Robert De Niro, Zazie Beetz...</li>
+              <li><strong>In Theaters:</strong> May 17, 2019 Wide</li>
+              <li><strong>Studio:</strong> Warner Bros</li>
+            </ul>
+            <hr />
+            <ul class="content__featured">
+              <li>
+                <i class="m-clock"></i> 2h 10min
+              </li>
+              <li>
+                <i class="m-movie"></i> Action, Thriller
+              </li>
+              <li>
+                <i class="m-chart-up"></i> Popularity 122 (85)
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="movie__action">
           <i class="m-closed"></i>
@@ -46,7 +78,40 @@
           <i class="m-plus"></i>
         </div>
         <div class="movie__content">
-          content 2
+          <div class="content">
+            <header class="content__header">
+              <h2>John Wick</h2>
+              <h3>Chapter 3 "Parabellum"</h3>
+            </header>
+            <div class="content__raking">
+              <i class="m-star-solid active"></i>
+              <i class="m-star-solid active"></i>
+              <i class="m-star-solid active"></i>
+              <i class="m-star-solid"></i>
+              <i class="m-star-solid"></i>
+            </div>
+            <p class="content__sipnosis">
+              John Wick is on the run after killing a member of the international assassins' guild, and with a $14 million price tag on his head, he is the target of hit men and women everywhere
+            </p>
+            <ul class="content__meta">
+              <li><strong>Director:</strong> Chad Stahelski</li>
+              <li><strong>Actors:</strong> Keanu Reeves, Halle Berry, Ian McShane...</li>
+              <li><strong>In Theaters:</strong> May 17, 2019 Wide</li>
+              <li><strong>Studio:</strong> Summit Entertaiment</li>
+            </ul>
+            <hr />
+            <ul class="content__featured">
+              <li>
+                <i class="m-clock"></i> 2h 10min
+              </li>
+              <li>
+                <i class="m-movie"></i> Action, Thriller
+              </li>
+              <li>
+                <i class="m-chart-up"></i> Popularity 122 (85)
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="movie__action">
           <i class="m-closed"></i>
@@ -66,7 +131,39 @@
           <i class="m-plus"></i>
         </div>
         <div class="movie__content">
-          content 3
+          <div class="content">
+            <header class="content__header">
+              <h2>Hellboy</h2>
+            </header>
+            <div class="content__raking">
+              <i class="m-star-solid active"></i>
+              <i class="m-star-solid active"></i>
+              <i class="m-star-solid active"></i>
+              <i class="m-star-solid"></i>
+              <i class="m-star-solid"></i>
+            </div>
+            <p class="content__sipnosis">
+              Based on the graphic novels by Mike Mignola, Hellboy, caught between the worlds of the supernatural and human, battles an ancient sorceress bent on revenge.
+            </p>
+            <ul class="content__meta">
+              <li><strong>Director:</strong> Neil Marshall</li>
+              <li><strong>Actors:</strong> David Harbour, Milla Jovovich, Ian McShane...</li>
+              <li><strong>In Theaters:</strong> May 17, 2019 Wide</li>
+              <li><strong>Studio:</strong> Lionsgate</li>
+            </ul>
+            <hr />
+            <ul class="content__featured">
+              <li>
+                <i class="m-clock"></i> 2h 10min
+              </li>
+              <li>
+                <i class="m-movie"></i> Action, Thriller
+              </li>
+              <li>
+                <i class="m-chart-up"></i> Popularity 122 (85)
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="movie__action">
           <i class="m-closed"></i>
@@ -86,7 +183,40 @@
           <i class="m-plus"></i>
         </div>
         <div class="movie__content">
-          content 4
+          <div class="content">
+            <header class="content__header">
+              <h2>Star Wars</h2>
+              <h3>The Rise of Skywalker</h3>
+            </header>
+            <div class="content__raking">
+              <i class="m-star-solid active"></i>
+              <i class="m-star-solid active"></i>
+              <i class="m-star-solid active"></i>
+              <i class="m-star-solid active"></i>
+              <i class="m-star-solid"></i>
+            </div>
+            <p class="content__sipnosis">
+              The surviving members of the resistance face the First Order once again, and the legendary conflict between the Jedi and the Sith reaches its peak bringing the Skywalker saga to its end.
+            </p>
+            <ul class="content__meta">
+              <li><strong>Director:</strong> J.J. Abrams</li>
+              <li><strong>Actors:</strong> Daisy Ridley, John Boyega, Oscar Isaac...</li>
+              <li><strong>In Theaters:</strong> May 17, 2019 Wide</li>
+              <li><strong>Studio:</strong> Walt Disnay Studios</li>
+            </ul>
+            <hr />
+            <ul class="content__featured">
+              <li>
+                <i class="m-clock"></i> 2h 10min
+              </li>
+              <li>
+                <i class="m-movie"></i> Action, Thriller
+              </li>
+              <li>
+                <i class="m-chart-up"></i> Popularity 122 (85)
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="movie__action">
           <i class="m-closed"></i>
