--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <link rel="stylesheet" href="./static/css/main.css" />
   </head>
   <body>
+    <section id="loading" class="loading">
+      <div class="lds-ring">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </section>
     <section class="video__container">
       <video id="video" poster=""></video>
       <i id="close-video" class="m-closed"></i>
@@ -21,7 +29,11 @@
         <div class="movie__sidebar">
           <div class="movie__sidebar--init">
             <div class="separator"></div>
-            <button class="view__video" data-video="joker.mp4" data-poster="1.jpg">
+            <button
+              class="view__video"
+              data-video="joker.mp4"
+              data-poster="1.jpg"
+            >
               <i class="m-caret-right-solid"></i>
             </button>
             <div class="separator separator-down"></div>
@@ -42,25 +54,25 @@
               <i class="m-star-solid"></i>
             </div>
             <p class="content__sipnosis">
-              In Gotham City, mentally troubled comedian Arthur Fleck is disregarded and mistreated by society. He then embarks on a downward spiral of revolution and bloody crime. This path brings him face-to-face with his alter-ego: the Joker.
+              In Gotham City, mentally troubled comedian Arthur Fleck is
+              disregarded and mistreated by society. He then embarks on a
+              downward spiral of revolution and bloody crime. This path brings
+              him face-to-face with his alter-ego: the Joker.
             </p>
             <ul class="content__meta">
               <li><strong>Director:</strong> Todd Phillips</li>
-              <li><strong>Actors:</strong> Joaquin Phoenix, Robert De Niro, Zazie Beetz...</li>
+              <li>
+                <strong>Actors:</strong> Joaquin Phoenix, Robert De Niro, Zazie
+                Beetz...
+              </li>
               <li><strong>In Theaters:</strong> May 17, 2019 Wide</li>
               <li><strong>Studio:</strong> Warner Bros</li>
             </ul>
             <hr />
             <ul class="content__featured">
-              <li>
-                <i class="m-clock"></i> 2h 10min
-              </li>
-              <li>
-                <i class="m-movie"></i> Action, Thriller
-              </li>
-              <li>
-                <i class="m-chart-up"></i> Popularity 122 (85)
-              </li>
+              <li><i class="m-clock"></i> 2h 10min</li>
+              <li><i class="m-movie"></i> Action, Thriller</li>
+              <li><i class="m-chart-up"></i> Popularity 122 (85)</li>
             </ul>
           </div>
         </div>
@@ -73,7 +85,11 @@
         <div class="movie__sidebar">
           <div class="movie__sidebar--init">
             <div class="separator"></div>
-            <button class="view__video" data-video="john-wick.mp4" data-poster="2.jpg">
+            <button
+              class="view__video"
+              data-video="john-wick.mp4"
+              data-poster="2.jpg"
+            >
               <i class="m-caret-right-solid"></i>
             </button>
             <div class="separator separator-down"></div>
@@ -95,25 +111,24 @@
               <i class="m-star-solid"></i>
             </div>
             <p class="content__sipnosis">
-              John Wick is on the run after killing a member of the international assassins' guild, and with a $14 million price tag on his head, he is the target of hit men and women everywhere
+              John Wick is on the run after killing a member of the
+              international assassins' guild, and with a $14 million price tag
+              on his head, he is the target of hit men and women everywhere
             </p>
             <ul class="content__meta">
               <li><strong>Director:</strong> Chad Stahelski</li>
-              <li><strong>Actors:</strong> Keanu Reeves, Halle Berry, Ian McShane...</li>
+              <li>
+                <strong>Actors:</strong> Keanu Reeves, Halle Berry, Ian
+                McShane...
+              </li>
               <li><strong>In Theaters:</strong> May 17, 2019 Wide</li>
               <li><strong>Studio:</strong> Summit Entertaiment</li>
             </ul>
             <hr />
             <ul class="content__featured">
-              <li>
-                <i class="m-clock"></i> 2h 10min
-              </li>
-              <li>
-                <i class="m-movie"></i> Action, Thriller
-              </li>
-              <li>
-                <i class="m-chart-up"></i> Popularity 122 (85)
-              </li>
+              <li><i class="m-clock"></i> 2h 10min</li>
+              <li><i class="m-movie"></i> Action, Thriller</li>
+              <li><i class="m-chart-up"></i> Popularity 122 (85)</li>
             </ul>
           </div>
         </div>
@@ -126,7 +141,11 @@
         <div class="movie__sidebar">
           <div class="movie__sidebar--init">
             <div class="separator"></div>
-            <button class="view__video" data-video="hellboy.mp4" data-poster="3.jpg">
+            <button
+              class="view__video"
+              data-video="hellboy.mp4"
+              data-poster="3.jpg"
+            >
               <i class="m-caret-right-solid"></i>
             </button>
             <div class="separator separator-down"></div>
@@ -147,25 +166,24 @@
               <i class="m-star-solid"></i>
             </div>
             <p class="content__sipnosis">
-              Based on the graphic novels by Mike Mignola, Hellboy, caught between the worlds of the supernatural and human, battles an ancient sorceress bent on revenge.
+              Based on the graphic novels by Mike Mignola, Hellboy, caught
+              between the worlds of the supernatural and human, battles an
+              ancient sorceress bent on revenge.
             </p>
             <ul class="content__meta">
               <li><strong>Director:</strong> Neil Marshall</li>
-              <li><strong>Actors:</strong> David Harbour, Milla Jovovich, Ian McShane...</li>
+              <li>
+                <strong>Actors:</strong> David Harbour, Milla Jovovich, Ian
+                McShane...
+              </li>
               <li><strong>In Theaters:</strong> May 17, 2019 Wide</li>
               <li><strong>Studio:</strong> Lionsgate</li>
             </ul>
             <hr />
             <ul class="content__featured">
-              <li>
-                <i class="m-clock"></i> 2h 10min
-              </li>
-              <li>
-                <i class="m-movie"></i> Action, Thriller
-              </li>
-              <li>
-                <i class="m-chart-up"></i> Popularity 122 (85)
-              </li>
+              <li><i class="m-clock"></i> 2h 10min</li>
+              <li><i class="m-movie"></i> Action, Thriller</li>
+              <li><i class="m-chart-up"></i> Popularity 122 (85)</li>
             </ul>
           </div>
         </div>
@@ -178,7 +196,11 @@
         <div class="movie__sidebar">
           <div class="movie__sidebar--init">
             <div class="separator"></div>
-            <button class="view__video" data-video="star-wars.mp4" data-poster="4.jpg">
+            <button
+              class="view__video"
+              data-video="star-wars.mp4"
+              data-poster="4.jpg"
+            >
               <i class="m-caret-right-solid"></i>
             </button>
             <div class="separator separator-down"></div>
@@ -200,25 +222,24 @@
               <i class="m-star-solid"></i>
             </div>
             <p class="content__sipnosis">
-              The surviving members of the resistance face the First Order once again, and the legendary conflict between the Jedi and the Sith reaches its peak bringing the Skywalker saga to its end.
+              The surviving members of the resistance face the First Order once
+              again, and the legendary conflict between the Jedi and the Sith
+              reaches its peak bringing the Skywalker saga to its end.
             </p>
             <ul class="content__meta">
               <li><strong>Director:</strong> J.J. Abrams</li>
-              <li><strong>Actors:</strong> Daisy Ridley, John Boyega, Oscar Isaac...</li>
+              <li>
+                <strong>Actors:</strong> Daisy Ridley, John Boyega, Oscar
+                Isaac...
+              </li>
               <li><strong>In Theaters:</strong> May 17, 2019 Wide</li>
               <li><strong>Studio:</strong> Walt Disnay Studios</li>
             </ul>
             <hr />
             <ul class="content__featured">
-              <li>
-                <i class="m-clock"></i> 2h 10min
-              </li>
-              <li>
-                <i class="m-movie"></i> Action, Thriller
-              </li>
-              <li>
-                <i class="m-chart-up"></i> Popularity 122 (85)
-              </li>
+              <li><i class="m-clock"></i> 2h 10min</li>
+              <li><i class="m-movie"></i> Action, Thriller</li>
+              <li><i class="m-chart-up"></i> Popularity 122 (85)</li>
             </ul>
           </div>
         </div>
